--- a/resources/styles/index.css
+++ b/resources/styles/index.css
@@ -96,7 +96,7 @@ body {
 
 .LandingPage {
   width: 100%;
-  padding: 13% 8% 5% 9%;
+  padding: 13% 8% 8% 9%;
   background-image: url(../images/imageTwo.png), url(../images/imageThree.png);
   background-position: left -20rem top 16rem, right -1rem top 24rem;
   background-repeat: no-repeat;
@@ -165,7 +165,7 @@ body {
   background-image: url(../images/scribble_light_2.png);
 background-repeat: no-repeat;
 /* background-position: right -1rem top 24rem; */
-background-position: right -1rem top 12rem;
+background-position: right -4rem top 15rem;
 }
 
 .momoriesLeft {
@@ -216,6 +216,63 @@ background-position: right -1rem top 12rem;
     font-size: 14px;
     text-align-last:center ;
     margin-top: 17px;
-
 }
 
+.travelsContainer{
+    width: 100%;
+    background-image: url(../images/scribble_dark_6.png),url(../images/scribble_dark_5.png);
+    background-repeat: no-repeat;
+    background-position: left 0px top -4rem, right 0px top 20rem;
+    margin-top: 7%;
+    background-size: 2rem 47rem, 4rem 28rem;
+}
+
+.travels{
+  padding: 8% 8% 5% 9%;
+}
+
+.travel{
+    display: inline-block;
+    width: 31%;
+}
+#travel1{
+    margin-right: 3%;
+}
+#travel2{
+    margin-right: 3%;
+}
+
+.travelImageContainer{
+    width: 100%;
+    margin-bottom: 27px;
+}
+
+.travelImageContainer > img{
+    width: 100%;
+}
+
+.travelTitle{
+    width: 83%;
+    line-height: 1;
+    margin-bottom: 27px;
+}
+
+.barLine{
+  height: 4px;
+  background-color: black;
+  width: 20%;
+  border-radius: 0px 6px 6px 0px;
+  margin-bottom: 20px;
+}
+
+.travelDescription{
+  line-height: 1.3;
+    text-align: justify;
+    font-size: 13px;
+    font-weight: bold;
+}
+
+.visitPlaces{
+  width: 82.6%;
+  margin: auto;
+}
